add the displaySchedule function

--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
     </header>
     <div class="container">  
       <!-- Timeblocks go here -->
-      <div class="row time-block">
-        <div class="col-2 hour"> 9AM </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn"></button>
+      <div class="row time-block" data-id="8" >
+        <div class="col-2 hour">8 AM </div>
+        <textarea class="col-9 description"></textarea>
+        <button class="col-1 saveBtn"></button>
+      </div>
+
+      <div class="row time-block" data-id="9" >
+        <div class="col-2 hour"> 9 AM </div>
+        <textarea class="col-9 description"></textarea>
+        <button class="col-1 saveBtn"></button>
+      </div>
+
+      <div class="row time-block" data-id="10" >
+        <div class="col-2 hour"> 10 AM </div>
+        <textarea class="col-9 description"></textarea>
+        <button class="col-1 saveBtn"></button>
       </div>
         
     </div>
