--- a/index.html
+++ b/index.html
@@ -23,55 +23,55 @@
       <div class="row time-block" data-id="9" >
         <div class="col-2 hour">9 AM </div>
         <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"></button>
       </div>
 
       <div class="row time-block" data-id="10">
         <div class="col-2 hour"> 10 AM </div>
-        <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <textarea class="col-9 description">Hello</textarea>
+        <button type="button" class="col-1 saveBtn"></button>
       </div>
 
       <div class="row time-block" data-id="11">
         <div class="col-2 hour"> 11 AM </div>
         <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"></button>
       </div>
 
       <div class="row time-block" data-id="12">
         <div class="col-2 hour"> 12 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"></button>
       </div>
 
       <div class="row time-block" data-id="13" >
         <div class="col-2 hour"> 1 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"></button>
       </div>
 
       <div class="row time-block" data-id="14" >
         <div class="col-2 hour"> 2 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <button type="button"class="col-1 saveBtn"></button>
       </div>
 
       <div class="row time-block" data-id="15" >
         <div class="col-2 hour"> 3 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"></button>
       </div>
 
       <div class="row time-block" data-id="16" >
         <div class="col-2 hour"> 4 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"></button>
       </div>
 
       <div class="row time-block" data-id="17" >
         <div class="col-2 hour"> 5 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"></button>
       </div>
         
     </div>
