--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -23,55 +24,55 @@
       <div class="row time-block" data-id="9" >
         <div class="col-2 hour">9 AM </div>
         <textarea class="col-9 description"></textarea>
-        <button type="button" class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
       <div class="row time-block" data-id="10">
         <div class="col-2 hour"> 10 AM </div>
         <textarea class="col-9 description">Hello</textarea>
-        <button type="button" class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
       <div class="row time-block" data-id="11">
         <div class="col-2 hour"> 11 AM </div>
         <textarea class="col-9 description"></textarea>
-        <button type="button" class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
       <div class="row time-block" data-id="12">
         <div class="col-2 hour"> 12 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button type="button" class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
       <div class="row time-block" data-id="13" >
         <div class="col-2 hour"> 1 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button type="button" class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
       <div class="row time-block" data-id="14" >
         <div class="col-2 hour"> 2 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button type="button"class="col-1 saveBtn"></button>
+        <button type="button"class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
       <div class="row time-block" data-id="15" >
         <div class="col-2 hour"> 3 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button type="button" class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
       <div class="row time-block" data-id="16" >
         <div class="col-2 hour"> 4 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button type="button" class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
       <div class="row time-block" data-id="17" >
         <div class="col-2 hour"> 5 PM </div>
         <textarea class="col-9 description"></textarea>
-        <button type="button" class="col-1 saveBtn"></button>
+        <button type="button" class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
         
     </div>
