updating readme file with link and phot of project

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="row time-block" data-id="14" >
         <div class="col-2 hour"> 2 PM </div>
-        <textarea class="col-9 description"></textarea>
+        <textarea class="col-9 col-sm-9 description"></textarea>
         <button type="button"class="col-1 saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
 
